some position is added

--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>New York Times</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <nav class="header-container">
-   <div class="logo-container">
-     <img class="logo" src="images/new-york-times-logo.png" alt="">
-   </div>
+      <div class="left-nav">
+        <i class="fa fa-bars menu"></i>
+        <i class="fa fa-search search" aria-hidden="true"></i>
+        <a class="left-logo" href="#">SPACE & COSMOS</a>
+      </div>
+
+      <div class="logo-nav">
+        <img class="logo" src="images/new-york-times-logo.png" alt="" />
+      </div>
+
+      <div class="right-nav">
+        <a class="right-logo" href="#">Subcribe for full access</a>
+        <button class="login">Login</button>
+      </div>
     </nav>
   </body>
 </html>
