--- a/index.html
+++ b/index.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
-    <title>New York Times</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-  </head>
-  <body>
-    <nav class="header-container">
-      <div class="left-nav">
+
+<head>
+  <meta charset="utf-8" />
+  <title>New York Times</title>
+  <link rel="stylesheet" type="text/css" href="styles/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <nav>
+
+    <ul class="flexbox">
+      <li class="menu"><i class="fa fa-bars"></i></li>
+      <li class="search"><i class="fa fa-search" aria-hidden="true"></i></li>
+      <li class="left-logo"><a href="#">SPACE & COSMOS</a></li>
+      <li class="logo-container"><img class="logo" src="images/new-york-times-logo.png" alt="The New York Times"></li>
+      <li class="right-logo"> <a href="#">Subscribe for full access</a></li>
+      <button>Login</button>
+    </ul>
+
+    <!-- TEST PART -->
+    <!-- <div class="left-nav">
         <i class="fa fa-bars menu"></i>
         <i class="fa fa-search search" aria-hidden="true"></i>
         <a class="left-logo" href="#">SPACE & COSMOS</a>
       </div>
 
       <div class="logo-nav">
-        <img class="logo" src="images/new-york-times-logo.png" alt="" />
+        <h4>The New York Times</h4>
       </div>
 
       <div class="right-nav">
         <a class="right-logo" href="#">Subcribe for full access</a>
         <button class="login">Login</button>
-      </div>
-    </nav>
-  </body>
+      </div> -->
+  </nav>
+</body>
+
 </html>
