add bottom date, and social icons

--- a/index.html
+++ b/index.html
@@ -1,56 +1,61 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
-    <title>New York Times</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" type="text/css" href="styles/fonts.css" />
-  </head>
 
-  <body>
-    <nav>
-      <ul class="flexbox">
-        <li class="menu"><i class="fa fa-bars"></i></li>
-        <li class="search"><i class="fa fa-search" aria-hidden="true"></i></li>
-        <li class="left-logo"><a href="#">SPACE & COSMOS</a></li>
-        <li class="logo-container">
-          <img
-            class="logo"
-            src="images/new-york-times-logo.png"
-            alt="The New York Times"
-          />
-        </li>
-        <li class="right-logo"><a href="#">Subscribe for full access</a></li>
-        <button class="login-btn">Login</button>
-      </ul>
-    </nav>
-    <main class="main-container">
-      <div class="title">
-        <h1>Space Ripples Reveal<br />Big Bang’s Smoking Gun</h1>
-        <a href="#">
-          <img src="images/article.jpg" />
-        </a>
-        <p>
-          Alan Guth was one of the first physicists to hypothesize the existence
-          of inflation, which explains how the<br />universe expanded so
-          uniformly and so quickly in the instant after the Big Bang 13.8
-          billion years ago.<br />Credit...Rick Friedman for The New York Times
-        </p>
-        <ul class="sub-title">
-          <li><h3>by Dennis Overbye</h3></li>
-          <li class="social-icons"><i class="fab fa-facebook"></i></li>  
+<head>
+  <meta charset="utf-8" />
+  <title>New York Times</title>
+  <link rel="stylesheet" type="text/css" href="styles/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <script src="https://kit.fontawesome.com/e32f4014f4.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="styles/fonts.css" />
+</head>
 
-        </ul>
-        
+<body>
+  <nav>
+    <ul class="flexbox">
+      <li class="menu"><i class="fa fa-bars"></i></li>
+      <li class="search"><i class="fa fa-search" aria-hidden="true"></i></li>
+      <li class="left-logo"><a href="#">SPACE & COSMOS</a></li>
+      <li class="logo-container">
+        <img class="logo" src="images/new-york-times-logo.png" alt="The New York Times" />
+      </li>
+      <li class="right-logo"><a href="#">Subscribe for full access</a></li>
+      <button class="login-btn">Login</button>
+    </ul>
+  </nav>
+  <main class="main-container">
+    <div class="title">
+      <h1>Space Ripples Reveal<br />Big Bang’s Smoking Gun</h1>
+      <a href="#">
+        <img src="images/article.jpg" />
+      </a>
+      <p>
+        Alan Guth was one of the first physicists to hypothesize the existence
+        of inflation, which explains how the<br />universe expanded so
+        uniformly and so quickly in the instant after the Big Bang 13.8
+        billion years ago.<br />Credit...Rick Friedman for The New York Times
+      </p>
+      <h3 class="by">By Dennis Overbye</h3>
+      <div class="wrap">
+
+        <h6 class="date">March 17, 2014</h6>
+
+  <ul class="social-icons">
+        <li><i class="fab fa-facebook-f"></i></li>
+<li><i class="fab fa-twitter"></i></li>
+<li><i class="fas fa-envelope-square"></i></li>
+<li><i class="fas fa-share"></i></li>
+<li><i class="far fa-flag"></i></li>
+<li><i class="far fa-comment"></i></li>
+    </ul>
       </div>
-    </main>
-  </body>
+
+
+
+
+    </div>
+  </main>
+</body>
+
 </html>
