update bottom grid, add side-div basic structure

--- a/index.html
+++ b/index.html
@@ -389,7 +389,18 @@
 
     <div class="bottom-header-02">
       <h5>Most Popular</h5>
-
+      <div class="popular-div">
+    <h4>RANDOM TEXT <BR>CONTINUE</h4>
+      <h4>RANDOM TEXT <BR>CONTINUE</h4>
+        <h4>RANDOM TEXT <BR>CONTINUE</h4>
+          <h4>RANDOM TEXT <BR>CONTINUE</h4>
+            <h4>RANDOM TEXT <BR>CONTINUE</h4>
+              <h4>RANDOM TEXT <BR>CONTINUE</h4>
+                <h4>RANDOM TEXT <BR>CONTINUE</h4>
+                  <h4>RANDOM TEXT <BR>CONTINUE</h4>
+                    <h4>RANDOM TEXT <BR>CONTINUE</h4>
+                      <h4>RANDOM TEXT <BR>CONTINUE</h4>
+      </div>
     </div>
   </div>
 
@@ -408,22 +419,33 @@
         <p class="box-text">This Is the Free Jumpsuit You'll Get With a $250.000 Ticket To Space<br><span><small>Oct. 22</small></span></p>
       </li>
       <li class="box">
-        <div class="box-thumbnail"><img src="images/box-placeholder.jpg" alt=""></div>
+        <div class="box-thumbnail"><img src="images/box-placeholder.jpg" alt=""><small class="box-description">Associated Press</small></div>
+        <p class="box-text">Aleksei Leonov, First to Walk In<br> Space, Dies at 85.<br><span><small>Oct. 11</small></span>
       </li>
       <li class="box">
-        <div class="box-thumbnail"><img src="images/box-placeholder.jpg" alt=""></div>
+        <div class="box-thumbnail"><img src="images/box-placeholder.jpg" alt=""><small class="box-description">Images by Jonathan Nackstrand/Agence France-Presse -- Getty Images</small></div>
+        <p class="box-text">Nobel Prize in Physics Awarded for Studies of Earth's Place in the Universe<br><span><small>Oct. 08</small></span>
       </li>
       <li class="box">
-        <div class="box-thumbnail"><img src="images/box-placeholder.jpg" alt=""></div>
+        <div class="box-thumbnail"><img src="images/box-placeholder.jpg" alt=""><small class="box-description">Allison Farrand for the New York Times</small></div>
+        <p class="box-text">An Astronaut Who Built Paths to<br> Space for Other Women<br><span><small>Oct. 02</small></span>
       </li>
       <li class="box">
-        <div class="box-thumbnail"><img src="images/box-placeholder.jpg" alt=""></div>
+        <hr>
+        <div class="box-thumbnail"><img src="images/box-placeholder.jpg" alt=""><small class="box-description">-</small></div>
+        <p class="box-text">Leaving Prison at 72.<br><span><small>Oct. 28</small></span>
       </li>
       <li class="box">
-        <div class="box-thumbnail"><img src="images/box-placeholder.jpg" alt=""></div>
+        <hr>
+        <div class="box-thumbnail"><img src="images/box-placeholder.jpg" alt=""><small class="box-description">Jhonny Millano for the New York Times</small></div>
+        <p class="box-text">A Lineman became a Doctor, but <br> Dementia made Him Retire. He's Only 42.<br><span><small>Oct. 28</small></span>
       </li>
+
       <li class="box">
-        <div class="box-thumbnail"><img src="images/box-placeholder.jpg" alt=""></div>
+    <hr>
+    <p id="editors">Editors' Picks</p>
+        <div class="box-thumbnail"><img src="images/box-placeholder.jpg" alt=""><small class="box-description">Calla Kessler/The New York Times</small></div>
+<p class="box-text">$7.5 Million 'Down The Train' : The Demice of the Bouncing Bridge<br><span><small>Oct. 29</small></span>
       </li>
     </ul>
     <div class="side-section">
