update eslint file, add more description texts

--- a/index.html
+++ b/index.html
@@ -712,6 +712,26 @@
           look for another explanation.</h5>
       </div>
     </div>
+
+
+    <div class="floating-div-02">
+      <div class="floating-item">
+        <h5><span>STILL NOT ENOUGH TIME</span> There has not been enough time to carry coffee cups from place to place before they get cold. But if all the coffee cups were somehow filled from a single coffee pot, all at the same time, that might
+          explain their even temperature</h5>
+      </div>
+      <div class="floating-item">
+        <h5><span>INFLATION</span> solves this problem. The theory proposes that, less than a trillionth of a second after the Big Bang, the universe expanded faster than the speed of light. Tiny ripples in the violently expanding energy field
+          eventually grew into the large-scale structures of the universe.</h5>
+      </div>
+      <div class="floating-item">
+        <h5><span>FLUCTUATION</span>Astronomers have now detected evidence of these ancient fluctuations in swirls of polarized light in the cosmic background radiation, which is energy left over from the early universe. These are gravitational waves
+          predicted by Einstein.</h5>
+      </div>
+      <div class="floating-item">
+        <h5><span>EXPANSION</span> Returning to our coffee, imagine a single, central pot expanding faster than light and cooling to an even temperature as it expands. That is something like inflation. And the structure of the universe mirrors the
+          froth and foam of the original pot.</h5>
+      </div>
+    </div>
   </footer>
 </body>
 
