add links to bottom grid section

--- a/index.html
+++ b/index.html
@@ -433,54 +433,66 @@
         <img class="box-thumbnail" src="images/jef.jpg" alt="footer" />
 
         <small class="box-description">Tom Brenner for The New York Times</small>
-        <p class="box-text">
-          Jeff Bezo's Blue Origin to Partner<br />
-          With 3 Companies on NASA Moon Lander<br /><span><small>Oct. 22</small></span>
-        </p>
+        <a href="">
+          <p class="box-text">
+            Jeff Bezo's Blue Origin to Partner<br />
+            With 3 Companies on NASA Moon Lander<br /><span><small>Oct. 22</small></span>
+          </p>
+        </a>
       </div>
       <div class="box1">
         <img class="box-thumbnail" src="images/why.jpg" alt="" />
         <small class="box-description">NASA,via Associated Press</small>
 
-        <p class="box-text">
-          Why NASA's First All-Women<br />
-          Spacewalk Made History<br /><span><small>Oct. 18</small></span>
-        </p>
+        <a href="">
+          <p class="box-text">
+            Why NASA's First All-Women<br />
+            Spacewalk Made History<br /><span><small>Oct. 18</small></span>
+          </p>
+        </a>
       </div>
       <div class="box1">
         <img class="box-thumbnail" src="images/Anastr.jpg" alt="" />
         <small class="box-description">Image for Calla Kessler/The New York Times</small>
 
-        <p class="box-text">
-          This Is the Free Jumpsuit You'll Get With a $250.000 Ticket To
-          Space<br /><span><small>Oct. 22</small></span>
-        </p>
+        <a href="">
+          <p class="box-text">
+            This Is the Free Jumpsuit You'll Get With a $250.000 Ticket To
+            Space<br /><span><small>Oct. 22</small></span>
+          </p>
+        </a>
       </div>
       <div class="box1">
         <img class="box-thumbnail" src="images/box-placeholder.jpg" alt="" />
         <small class="box-description">Associated Press</small>
 
-        <p class="box-text">
-          Aleksei Leonov, First to Walk In<br />
-          Space, Dies at 85.<br /><span><small>Oct. 11</small></span>
-        </p>
+        <a href="">
+          <p class="box-text">
+            Aleksei Leonov, First to Walk In<br />
+            Space, Dies at 85.<br /><span><small>Oct. 11</small></span>
+          </p>
+        </a>
       </div>
       <div class="box1">
         <img class="box-thumbnail" src="images/this.jpg" alt="" /><small class="box-description">Images by Jonathan Nackstrand/Agence France-Presse -- Getty
           Images</small>
 
-        <p class="box-text">
-          Nobel Prize in Physics Awarded for Studies of Earth's Place in the
-          Universe<br /><span><small>Oct. 08</small></span>
-        </p>
+        <a href="">
+          <p class="box-text">
+            Nobel Prize in Physics Awarded for Studies of Earth's Place in the
+            Universe<br /><span><small>Oct. 08</small></span>
+          </p>
+        </a>
       </div>
       <div class="box1">
         <img class="box-thumbnail" src="images/paranormal-doll-640.png" alt="" /><small class="box-description">Allison Farrand for the New York Times</small>
 
-        <p class="box-text">
-          An Astronaut Who Built Paths to<br />
-          Space for Other Women<br /><span><small>Oct. 02</small></span>
-        </p>
+        <a href="">
+          <p class="box-text">
+            An Astronaut Who Built Paths to<br />
+            Space for Other Women<br /><span><small>Oct. 02</small></span>
+          </p>
+        </a>
       </div>
     </div>
     <aside class="bottom-rightsidebar">
@@ -537,29 +549,35 @@
         <img class="box-thumbnail" src="images/siliconvalley.jpg" alt="" />
         <small class="box-description">DElho/The New York Times</small>
 
-        <p class="box-text">
-          ‘Silicon Valley,’ Darker Than Ever,<br />
-          Captures the Bleak Mood of Tech
-          <br /><span><small>Oct. 18</small></span>
-        </p>
+        <a href="">
+          <p class="box-text">
+            ‘Silicon Valley,’ Darker Than Ever,<br />
+            Captures the Bleak Mood of Tech
+            <br /><span><small>Oct. 18</small></span>
+          </p>
+        </a>
       </div>
       <div class="box1">
         <img class="box-thumbnail" src="images/hunted.jpg" alt="" />
         <small class="box-description">jagno/The New York Times</small>
 
-        <p class="box-text">
-          $7.5 Million ‘Down the Drain’: The<br />
-          Demise of the Bouncing Bridge<br /><span><small> 25, 2019</small></span>
-        </p>
+        <a href="">
+          <p class="box-text">
+            $7.5 Million ‘Down the Drain’: The<br />
+            Demise of the Bouncing Bridge<br /><span><small> 25, 2019</small></span>
+          </p>
+        </a>
       </div>
       <div class="box1">
         <img class="box-thumbnail" src="images/thesecret.jpg" alt="" />
         <small class="box-description">KALA caser/The New York Times</small>
 
-        <p class="box-text">
-          Its buys market for Two-<br />
-          Bedrooms<br /><span><small>Oct. 18</small></span>
-        </p>
+        <a href="">
+          <p class="box-text">
+            Its buys market for Two-<br />
+            Bedrooms<br /><span><small>Oct. 18</small></span>
+          </p>
+        </a>
       </div>
     </div>
   </div>
